@@ -205,7 +205,7 @@ public class SentenceSummary {
                     .stream()
                     .map(OffenderSentenceCharge::getOffenderCharge)
                     .map(OffenderCharge::getOffenceDetail)
-                    .collect(Collectors.toList()))
+                    .toList())
                 .build();
         }
 
