@@ -23,7 +23,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @Transactional(readOnly = true)
@@ -68,10 +68,10 @@ public class LocationService {
 
                 // Then retrieve all associated internal locations at configured level of granularity.
                 locations.addAll(agencyInternalLocationRepository.findByAgencyIdAndLocationTypeAndActiveAndParentLocationIsNull(agency.getAgencyId(), locationTypeGranularity, true)
-                        .stream().map(LocationTransformer::fromAgencyInternalLocationPreferUserDesc).sorted(Comparator.comparing(Location::getDescription)).collect(Collectors.toList()));
+                        .stream().map(LocationTransformer::fromAgencyInternalLocationPreferUserDesc).sorted(Comparator.comparing(Location::getDescription)).toList());
                 return locations.stream();
 
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public Page<OffenderBooking> getInmatesFromLocation(final long locationId, final String username, final String orderByField, final Order order, final long offset, final long limit) {
@@ -99,6 +99,12 @@ public class LocationService {
             .findLocation(locationId, includeInactive ? StatusFilter.ALL : StatusFilter.ACTIVE_ONLY)
             .orElseThrow(EntityNotFoundException.withId(locationId));
     }
+
+    public Optional<Location> getLocationByCode(final String code) {
+        return agencyInternalLocationRepository.findOneByDescription(code)
+            .map(LocationTransformer::fromAgencyInternalLocationPreferUserDesc);
+    }
+
 
     private String getWorkingCaseLoad(final String username) {
         final var workingCaseLoad = caseLoadService.getWorkingCaseLoadForUser(username);
